store todo list in localstorage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>todos</h1>
-    <span id="note">Click on the todo item to mark it done or click <span id="btnX">X</span> to delete it</span>
+    <small id="note">Click on the todo item to mark it done or click <small id="btnX">X</small> to delete it</small>
     <div class="todo-container">
         <form id="form">
             <input 
